# near-agent

./: .gitignore  README.md  config.toml.example  pyproject.toml
demo/: demo_session.json  demo_session.md
src/near_agent/: __init__.py  agent.py  api.py  bidder.py  cli.py  config.py  executor.py  notifier.py  scout.py  transcript.py
