[project]
name = "near-agent"
version = "0.1.0"
description = "Autonomous agent for market.near.ai — discovers jobs, bids, executes work, submits deliverables"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "websockets>=13.0",
    "anthropic>=0.40",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
near-agent = "near_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/near_agent"]
